--- a/svelte-nonote/package.json
+++ b/svelte-nonote/package.json
@@ -1,9 +1,8 @@
 {
-  "name": "TODO",
-  "description": "TODO",
+  "name": "no-note",
   "version": "0.0.1",
   "scripts": {
-    "dev": "sapper dev",
+    "dev": "sapper dev --no-hot",
     "build": "sapper build",
     "export": "sapper export",
     "start": "node __sapper__/build",
